--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -422,6 +422,9 @@ footer.no-shadow {
 
     
     #typing-effect {
+        padding-left:-2rem;
+        padding-right: -2rem;
+    }
 
 
         font-size: 1.1rem;
