--- a/assets/styles/animations/compiler.css
+++ b/assets/styles/animations/compiler.css
@@ -80,7 +80,7 @@ ORDINE CORRETTO in direzione scrittura
 
 
                     #typing-container {
-                        border: 1px dashed red; /* Controllo contenitore */
+                        border: 1px dashed fuchsia; /* Controllo contenitore */
                     }
 
                     #typing-effect {
