--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -422,8 +422,7 @@ footer.no-shadow {
 
     
     #typing-effect {
-        padding-left:-2rem;
-        padding-right: -2rem;
+        margin: 0;
 
         font-size: 1.1rem;
         line-height: 1.4rem;
