--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -422,7 +422,9 @@ footer.no-shadow {
 
     
     #typing-effect {
+        margin: 0;
 
+        
         font-size: 1.1rem;
         line-height: 1.4rem;
     }
