--- a/assets/styles/animations/compiler.css
+++ b/assets/styles/animations/compiler.css
@@ -125,6 +125,7 @@ ORDINE CORRETTO in direzione scrittura
     text-align: left;
     animation: blink 1s steps(1) infinite;
     line-height: 2rem;
+    margin: 0;
 }
 
 /* Typing Effect - Style2 */
