--- a/assets/styles/animations/compiler.css
+++ b/assets/styles/animations/compiler.css
@@ -25,7 +25,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 #typing-container {
     width: 100%;
     max-width: 1200px;
-    height: auto; /*100vh; */
+    height: 100%; /*100vh; */
     display: flex;
     justify-content: center;
     align-items: center;
