--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -386,6 +386,8 @@ footer.no-shadow {
     #typing-effect {   
         font-size: 1.3rem;
         line-height: 1.6rem;
+
+            font-weight: normal;
     }
     
     footer {
