--- a/assets/styles/animations/compiler.css
+++ b/assets/styles/animations/compiler.css
@@ -40,6 +40,13 @@ Use, distribution, or modification of this project is strictly prohibited withou
 
 /* --- Typing Container --- */
 #typing-container {
+
+
+    
+    margin-top: 10%;
+
+
+
     width: 100%;
     max-width: 1200px;
     height: 30vh;
