--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -106,15 +106,15 @@ h1, h2, h3 {
 }
 
 h1 {
-    font-size: 2.5rem;
+    font-size: 2rem; /* 2.5 */
 }
 
 h2 {
-    font-size: 1.5rem;
+    font-size: 1.5rem; /* 1.5 */
 }
 
 h3 {
-    font-size: 1.2rem;
+    font-size: 1rem; /* 1.2 */    
     font-weight: bold;
 }
 
@@ -181,7 +181,7 @@ footer {
     box-shadow: 0 -3px 5px #24242420, 
                 -10px 0 300px 50px #000000,
                 10px 0 300px 50px #000000,
-                0 10px 90px 70px #000000;
+                0 10px 80px 70px #000000;
     transition: box-shadow 0.3s ease-in-out, opacity 0.3s ease-in-out;
     background-color: rgba(0, 0, 0, 0.9);
     backdrop-filter: blur(10px);
@@ -212,9 +212,6 @@ footer.no-shadow {
     line-height: 1.4;
      /* Box shadow effects */
     background-color: rgba(0, 0, 0, 0.1);
-
-
-
     transition: transform 0.4s ease-in-out, opacity 0.4s ease-in-out;
     backdrop-filter: blur(10px);
     -webkit-backdrop-filter: blur(10px);
@@ -303,14 +300,14 @@ footer.no-shadow {
 
 /* --- Structure Padding --- */
 .divider-with-padding {
-    width: 100%; /* Full-width divider */
-    height: 0px; /* Divider thickness */
-    background-color: #00000000; /* Divider color */
+    width: 100%;
+    height: 0px;
+    background-color: #00000000;
     padding: var(--spacer-size);
     box-sizing: border-box;
-    position: relative; /* Ensures pseudo-elements position relative to this */
-
-    border: 1px dashed purple; /* Debug*/
+    position: relative;
+    /*
+    border: 1px dashed purple;  Debug*/
 }
 
 /* --- Responsive Design --- */
