--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -179,9 +179,9 @@ footer {
     line-height: 1.4;
     /* Box shadow effects */
     box-shadow: 0 -3px 5px #24242420, 
-                -10px 0 300px 50px #000000,
-                10px 0 300px 50px #000000,
-                0 10px 7px 8px #ff000067;
+                -10px 0 100px 50px #000000,
+                10px 0 100px 50px #000000,
+                0 10px 10px 12px #00ff44;
     transition: box-shadow 0.3s ease-in-out, opacity 0.3s ease-in-out;
     background-color: rgba(0, 0, 0, 0.9);
     backdrop-filter: blur(10px);
