--- a/assets/styles/main.css
+++ b/assets/styles/main.css
@@ -114,7 +114,7 @@ h2 {
 
 h3 {
     font-size: 1.5rem; /* 1.2 */    
-    font-weight: bold;
+    /*font-weight: bold;*/
 }
 
 /* --- Paragraphs --- */
