--- a/assets/styles/gpts.css
+++ b/assets/styles/gpts.css
@@ -21,6 +21,61 @@ Use, distribution, or modification of this project is strictly prohibited withou
 ===============================================================================
 */
 
+.gpt-container {
+    max-width: 100%; /*1200px; /* 800px; */
+    margin: 0 auto;
+    /* padding: var(--spacing); */
+}
+
+.menu-title {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    cursor: pointer;
+    background-color: var(--bg-color);
+    /* padding: 10px; */
+    border-radius: 5px;
+    transition: background-color 3s;
+}
+.menu-title:hover {
+    background-color: #242424;
+}
+.menu-title h3 {
+    margin: 0;
+}
+.menu-title .toggle-icon {
+    font-size: 1.5rem; /* 20px; */
+}
+
+.toggle-icon:hover{
+    color: var(--compiler1-color);
+    text-decoration: none;
+    transition: color 0.3s;
+    font-weight: bold;
+}
+.menu-content {
+    display: none;
+    padding: 15px;
+    background-color: var(--info-bg);
+    border: 1px solid #000;
+    border-radius: 13px; /* 5px; */
+    margin-top: 10px;
+}
+.menu-content .gpt-item {
+    display: flex;
+    align-items: center;
+    margin-bottom: 10px;
+}
+.menu-content .gpt-item img {
+    width: 45px;
+    height: 45px;
+    border-radius: 50%;
+    margin-right: 10px;
+}
+.menu-content .gpt-item span {
+    font-size: 16px;
+}
+
 /*
         body {
             font-family: Arial, sans-serif;
@@ -32,10 +87,6 @@ Use, distribution, or modification of this project is strictly prohibited withou
         h1, h2, h3 {
     margin: 10px 0;
 }
-*/
-
-
-
 
 .gpt-container {
     max-width: 800px;
@@ -84,3 +135,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 .menu-content .gpt-item span {
     font-size: 16px;
 }
+
+
+
+*/
