--- a/assets/styles/gpts.css
+++ b/assets/styles/gpts.css
@@ -17,7 +17,7 @@ Use, distribution, or modification of this project is strictly prohibited withou
 -------------------------------------------------------------------------------
 
 # Version: v3.5 (250125)
-# URL: https://genialabile.com/assets/styles/main.css
+# URL: https://genialabile.com/assets/styles/gpts.css
 ===============================================================================
 */
 
